# scc_remediation_agent

./: .env.example  .env.local  .gitignore  ARCHITECTURE.md  LOCAL_TESTING.md  README.md  agent.yaml  cli.py  docker-compose.yml  pyproject.toml  scc-remediation-agent-addendum.md  scc-remediation-agent-spec.md
app/: __init__.py  agent.py  hooks.py  main.py  prompts.py
app/agents/: dormancy_agent.py  impact_agent.py  plan_agent.py  preflight_agent.py  triage_agent.py  verify_agent.py
app/tools/: agent_output.py  approval_tools.py  command_compiler.py  confidence.py  context_budget.py  graph_tools.py  network_tools.py  osconfig_tools.py  regression_monitor.py  rollback_tools.py  scc_tools.py  validate_plan_tool.py
config/: policies.py  schema.py  validator.py
graph/events/: filter.py  handlers.py  invalidation.py  processor.py  proximity_index.py
graph/ingestion/: asset_ingester.py  finding_ingester.py  iam_ingester.py  relationship_ingester.py  run_full_sync.py
graph/queries/: blast_radius.cypher  dependency_chain.cypher  dormancy_check.cypher  iam_paths.cypher
graph/schema/: nodes.cypher  relationships.cypher
infrastructure/: setup_feeds.py  setup_log_sink.py
scheduler/: freeze.py  main.py  windows.py
scripts/: check_model_access.py  demo.sh  discover_models.py  local_test.sh  seed_local_config.py
terraform/: iam.tf  main.tf  neo4j.tf  terraform.tfvars.example  variables.tf
terraform/demo/: iam.tf  main.tf  misconfigs.tf  neo4j.tf  outputs.tf  variables.tf
tests/eval/: eval_config.json
tests/eval/evalsets/: basic.evalset.json
tests/fixtures/: mock_assets.json  mock_findings.json
tests/unit/: test_agent_output.py  test_confidence.py  test_filter.py  test_hooks.py  test_impact_agent.py  test_invalidation.py  test_policies.py  test_scheduler.py  test_schema.py  test_security_layers.py  test_triage_agent.py
ui/api/: main.py
ui/src/: App.tsx
ui/src/api/: config.ts
ui/src/components/: ApprovalStep.tsx  ConfidenceScore.tsx  ExecutionStep.tsx  NotificationStep.tsx  PreflightChecklist.tsx  RollbackButton.tsx  ScopeStep.tsx  SeverityStep.tsx
ui/src/pages/: AuditLog.tsx  ConfigWizard.tsx  Dashboard.tsx  Policies.tsx
