[project]
name = "scc-remediation-agent"
version = "0.1.0"
description = "Autonomous GCP security remediation agent powered by Google ADK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "google-cloud-asset>=3.0.0",
    "google-cloud-securitycenter>=1.0.0",
    "google-cloud-os-config>=1.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "pytz>=2023.3",
    "google-api-python-client>=2.0.0",
    "google-cloud-firestore>=2.0.0",
    "google-cloud-tasks>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
scc-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "graph", "scheduler", "cli.py"]

[tool.uv.sources]
# agents-cli is installed separately via: uvx google-agents-cli setup

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
